Enable integer-type native runtime settings. #5669

--- a/vnext/Desktop/React.Windows.Desktop.vcxproj.filters
+++ b/vnext/Desktop/React.Windows.Desktop.vcxproj.filters
@@ -93,6 +93,7 @@
       <Filter>Source Files\Modules</Filter>
     </ClCompile>
     <ClCompile Include="DevSupportManager.cpp">
+    <ClCompile Include="WebSocketResourceFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="HttpResource.cpp">
@@ -106,6 +107,10 @@
       <Filter>Generated Files</Filter>
     </ClCompile>
     <ClCompile Include="WebSocketResourceFactory.cpp">
+    <ClCompile Include="RuntimeOptions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -121,6 +126,12 @@
     </ClInclude>
     <ClInclude Include="ABI\NativeTraceEventSource.h">
       <Filter>ABI</Filter>
+    </ClInclude>
+    <ClInclude Include="ABI\TestController.h">
+      <Filter>ABI</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -157,6 +168,11 @@
     </ClInclude>
     <ClInclude Include="BeastWebSocketResource.h">
       <Filter>Header Files</Filter>
+    <ClInclude Include="..\Microsoft.ReactNative\RedBoxErrorFrameInfo.h">
+      <Filter>ABI</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Microsoft.ReactNative\RedBoxErrorInfo.h">
+      <Filter>ABI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
