[0.60] Enable integer-type native runtime settings. (#5714)
* Handle MessageWebSocket constructor exceptions (#5629)

* Remove unused WebSocket factory arguments

* Add test InternalSocketThrowsHResult

* Change files

* Relocate InternalSocketThrowsHResult

* Make url argument r-value reference

* Catch generic error

* Enable integer-type native runtime settings. #5669

* Change files

* Update missing changes due to renaming

* Apply transitive WebSocket changes

* clang format

--- a/vnext/Desktop/React.Windows.Desktop.vcxproj
+++ b/vnext/Desktop/React.Windows.Desktop.vcxproj
@@ -95,8 +95,9 @@
     <ClCompile Include="DevSupportManager.cpp" />
     <ClCompile Include="Executors\WebSocketJSExecutor.cpp" />
     <ClCompile Include="Executors\WebSocketJSExecutorFactory.cpp" />
-    <ClCompile Include="Modules\NetworkingModule.cpp" />
+    <ClCompile Include="RuntimeOptions.cpp" />
     <ClCompile Include="JSBigStringResourceDll.cpp" />
+    <ClCompile Include="Modules\NetworkingModule.cpp" />
     <ClCompile Include="Modules\TimingModule.cpp" />
     <ClCompile Include="Modules\WebSocketModule.cpp" />
     <ClCompile Include="pch.cpp">
