[0.62] Enable integer-type native runtime settings. (#5712)
* Handle MessageWebSocket constructor exceptions (#5629)

* Remove unused WebSocket factory arguments

* Add test InternalSocketThrowsHResult

* Change files

* Relocate InternalSocketThrowsHResult

* Make url argument r-value reference

* Catch generic error

* Enable integer-type native runtime settings. (#5669)

* Adjust Desktop VS filters

* Add Get/SetRuntimeOptionInt.

* Add documentation

* Change files

* Update usage in RNTesterIntegrationTests

* Renamed FeatureGate as RuntimeOptions

* Get omitted WebSocket updates

* Revert Beast WebSocket to boost 1.68.

* Remove old change files

* Change files

* clang format

--- a/vnext/Shared/Shared.vcxitems.filters
+++ b/vnext/Shared/Shared.vcxitems.filters
@@ -18,5 +18,12 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)AsyncStorage\StorageFileIO.h">
       <Filter>AsyncStorage</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)AbiSafe.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)AsyncStorageModule.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)AsyncStorage\AsyncStorageManager.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)AsyncStorage\FollyDynamicConverter.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)AsyncStorage\KeyValueStorage.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)RuntimeOptions.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)Modules\AsyncStorageModuleWin32.h" />
   </ItemGroup>
 </Project>
