--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -70,7 +70,7 @@ steps:
     inputs:
       versionSpec: ">=4.6.0"
 
-- ${{ if eq(parameters.useNuGet, true) }}
+- ${{ if eq(parameters.useNuGet, true) }}:
   - template: templates/prep-and-pack-nuget.yml
     parameters:
       npmVersion: $(npmVersion)
