--- a/vnext/NuGet.Config
+++ b/vnext/NuGet.Config
@@ -5,6 +5,6 @@
   </config>
   <packageSources>
     <add key="Nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="react-native-public" value="https://pkgs.dev.azure.com/ms/react-native/_packaging/react-native-public/nuget/v3/index.json" />
   </packageSources>
-
 </configuration>
